--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Strata</strong>, a super simple<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<h1>Hi, my name is <strong>Firdaus Eka Rizqi</strong>.<br />
+					I'm a Game Developer specialized in Unity Engine.<br /> I'm currently looking for new ways to hone my skills to create my Magnum Opus</a>.</h1>
 				</div>
 			</header>
 
@@ -29,53 +28,71 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>Employment History</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>
+							<strong>Middle Game Programmer</strong><br/>
+							Matata Edukasi Inovasi	(Jan 2020 - Oct 2023)<br/>
+							<strong>Junior Game Programmer</strong><br/>
+							Matata Studio Indonesia	(Nov 2015 - Dec 2020)
+						</p>
+						<!--
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
+						-->
 					</section>
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>
+						<h2>Portfolio</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
+								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/uprising.jpg" alt="" /></a>
+								<h3>Uprising: Indonesia War of Independence</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
+								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/kaladuta.png" alt="" /></a>
+								<h3>Ekspedisi Kaladuta</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
+								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/kaladuta_auto.png" alt="" /></a>
+								<h3>Ekspedisi Kaladuta: Auto Battle</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
+								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/kaladuta_harvest.png" alt="" /></a>
+								<h3>Ekspedisi Kaladuta: Harvest Tiime!</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
+								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/Kaladuta_runner.png" alt="" /></a>
+								<h3>Ekspedisi Kaladuta: Runner</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
+								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/shd.png" alt="" /></a>
+								<h3>Superhero Diary</h3>
+								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/cikal.png" alt="" /></a>
+								<h3>Cikal Playground</h3>
+								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/minang.png" alt="" /></a>
+								<h3>Playground of Minang AR</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 						</div>
+						<!--
 						<ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
 						</ul>
+						-->
 					</section>
 
 				<!-- Three -->
