--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
 							<strong>Junior Game Programmer</strong><br/>
 							Matata Studio Indonesia	(Nov 2015 - Dec 2020)
 						</p>
+						<header class="major">
+							<h2>Education</h2>
+						</header>
+						<p>
+							<strong>Brawijaya University, Malang</strong><br/>
+							Bachelor Degree 2008 - 2015<br/>
+							Software Engineering, Faculty of Computer Science. GPA 3.51
+						</p>
 						<!--
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
@@ -45,12 +53,19 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Portfolio</h2>
+						<header class="major">
+							<h2>Portfolio</h2>
+						</header>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/uprising.jpg" alt="" /></a>
-								<h3>Uprising: Indonesia War of Independence</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Uprising: War of Independence</h3>
+								<p>Multiplayer FPS game that immerses you in the Indonesian struggle for independence from the Dutch and allied forces during the pivotal years of 1945 - 1949.	
+									<ul class="icons">
+										<li><a href="https://play.google.com/store/apps/details?id=com.MatataEdu.Uprising" class="icon brands fa-twitter"><span class="label">Google Play Store</span></a></li>
+										<li><a href="https://apps.apple.com/us/app/uprising-war-of-independence/id6451290709" class="icon brands fa-twitter"><span class="label">App Store</span></a></li>
+									</ul>								
+								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/kaladuta.png" alt="" /></a>
@@ -75,7 +90,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/shd.png" alt="" /></a>
 								<h3>Superhero Diary</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>Superhero Diary is a game with integrated VR to help children manage anxiety.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/cikal.png" alt="" /></a>
