--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Firdaus Eka Rizi's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/eka.png" alt="" /></a>
 					<h1>Hi, my name is <strong>Firdaus Eka Rizqi</strong>.<br />
 					I'm a Game Developer specialized in Unity Engine.<br /> I'm currently looking for new ways to hone my skills to create my Magnum Opus</a>.</h1>
 				</div>
@@ -60,47 +63,84 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/uprising.jpg" alt="" /></a>
 								<h3>Uprising: War of Independence</h3>
-								<p>Multiplayer FPS game that immerses you in the Indonesian struggle for independence from the Dutch and allied forces during the pivotal years of 1945 - 1949.	
-									<ul class="icons">
-										<li><a href="https://play.google.com/store/apps/details?id=com.MatataEdu.Uprising" class="icon brands fa-twitter"><span class="label">Google Play Store</span></a></li>
-										<li><a href="https://apps.apple.com/us/app/uprising-war-of-independence/id6451290709" class="icon brands fa-twitter"><span class="label">App Store</span></a></li>
-									</ul>								
+								<p>Multiplayer FPS game that immerses you in the Indonesian struggle for independence from the Dutch and allied forces during the pivotal years of 1945 - 1949.
 								</p>
+								<p> <br /> </p>
+								<ul class="icons">
+									<li><a href="https://play.google.com/store/apps/details?id=com.MatataEdu.Uprising" class="fab fa-google-play" style="font-size:36px"></a></li>
+									<li><a href="https://apps.apple.com/us/app/uprising-war-of-independence/id6451290709" class="fab fa-apple" style="font-size:40px"></a></li>									
+								</ul>		
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/kaladuta.png" alt="" /></a>
 								<h3>Ekspedisi Kaladuta</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>Ekspedisi Kaladuta is a Turn-Based RPG game set in the historical era of the siege of Batavia City by Mataram Sultanate, which was occupied by the Dutch East India Company (VOC) during the years 1628-1629.</p>
+								<p> <br /> </p>
+								<ul class="icons">
+									<li><a href="https://play.google.com/store/apps/details?id=com.MatataEdu.Uprising" class="fab fa-google-play" style="font-size:36px"></a></li>
+									<li><a href="https://apps.apple.com/us/app/ekspedisi-kaladuta/id6446247720" class="fab fa-apple" style="font-size:40px"></a></li>
+									<li><a href="https://bantubelajar.co.id/game/bb-ips-7" class="fa fa-globe" style="font-size:40px"></a></li>
+								</ul>	
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/kaladuta_auto.png" alt="" /></a>
 								<h3>Ekspedisi Kaladuta: Auto Battle</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p> <br /> </p>
+								<ul class="icons">
+									<li><a href="https://play.google.com/store/apps/details?id=com.MatataEdu.KaladutaAutoBattle" class="fab fa-google-play" style="font-size:36px"></a></li>
+									<li><a href="https://apps.apple.com/us/app/kaladuta-auto-battle/id6446479595" class="fab fa-apple" style="font-size:40px"></a></li>
+									<li><a href="https://bantubelajar.co.id/game/kaladuta-auto-battle" class="fa fa-globe" style="font-size:40px"></a></li>
+								</ul>	
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/kaladuta_harvest.png" alt="" /></a>
 								<h3>Ekspedisi Kaladuta: Harvest Tiime!</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p> <br /> </p>
+								<ul class="icons">
+									<li><a href="https://play.google.com/store/apps/details?id=com.MatataEdu.KaladutaHarvest" class="fab fa-google-play" style="font-size:36px"></a></li>
+									<li><a href="https://apps.apple.com/us/app/kaladuta-harvest-time/id6446883464" class="fab fa-apple" style="font-size:40px"></a></li>
+									<li><a href="https://bantubelajar.co.id/game/kaladuta-harvest" class="fa fa-globe" style="font-size:40px"></a></li>
+								</ul>	
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/Kaladuta_runner.png" alt="" /></a>
 								<h3>Ekspedisi Kaladuta: Runner</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p> <br /> </p>
+								<ul class="icons">
+									<li><a href="https://play.google.com/store/apps/details?id=com.MatataEdu.KaladutaRunner" class="fab fa-google-play" style="font-size:36px"></a></li>
+									<li><a href="https://apps.apple.com/us/app/kaladuta-runner/id6446886196" class="fab fa-apple" style="font-size:40px"></a></li>									
+									<li><a href="https://bantubelajar.co.id/game/kaladuta-runner" class="fa fa-globe" style="font-size:40px"></a></li>
+								</ul>	
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/shd.png" alt="" /></a>
 								<h3>Superhero Diary</h3>
 								<p>Superhero Diary is a game with integrated VR to help children manage anxiety.</p>
+								<p> <br /> </p>
+								<ul class="icons">
+									<li><a href="https://play.google.com/store/apps/details?id=com.matatacorp.superherodiaryClinic" class="fab fa-google-play" style="font-size:36px"></a></li>
+								</ul>	
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/cikal.png" alt="" /></a>
 								<h3>Cikal Playground</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p> <br /> </p>
+								<ul class="icons">
+									<li><a href="https://play.google.com/store/apps/details?id=com.matata.games.playground.hiddenobject" class="fab fa-google-play" style="font-size:36px"></a></li>
+									<li><a href="https://bantubelajar.co.id/game/bb-playground-minang" class="fa fa-globe" style="font-size:40px"></a></li>
+								</ul>	
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/minang.png" alt="" /></a>
 								<h3>Playground of Minang AR</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p> <br /> </p>
+								<ul class="icons">
+								</ul>	
 							</article>
 						</div>
 						<!--
@@ -113,8 +153,11 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
+						<!--
 						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
+						-->
 						<div class="row">
+							<!--
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
 									<div class="row gtr-uniform gtr-50">
@@ -127,21 +170,24 @@
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
 							</div>
+							-->
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
-										United States
+										Pancoran Mas<br />
+										Depok, West Java<br />
+										Indonesia
 									</li>
+									<!--
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
 										000-000-0000
 									</li>
+									-->
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<a href="#">firdausekarizqi@gmail.com</a>
 									</li>
 								</ul>
 							</div>
@@ -472,13 +518,19 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
+						<!--
 						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						-->
+						<li><a href="https://www.linkedin.com/in/firdaus-eka-rizqi" class="fa fa-linkedin-square" style="font-size:36px"></a></li>
+						<li><a href="#three" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
+						<!--
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						-->
 					</ul>
 				</div>
 			</footer>
