--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 						</header>
 						<p>
 							<strong>Middle Game Programmer</strong><br/>
-							Matata Edukasi Inovasi	(Jan 2020 - Oct 2023)<br/>
+							<a href="https://matataedu.com/">Matata Edukasi Inovasi</a>	(Jan 2020 - Oct 2023)<br/>
 							<strong>Junior Game Programmer</strong><br/>
-							Matata Studio Indonesia	(Nov 2015 - Dec 2020)
+							<a href="https://matatacorp.com/">Matata Studio Indonesia</a>	(Nov 2015 - Dec 2020)
 						</p>
 						<header class="major">
 							<h2>Education</h2>
@@ -61,20 +61,21 @@
 						</header>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/uprising.jpg" alt="" /></a>
+								<a href="images/games/uprising1.png" class="image fit thumb"><img src="images/thumbs/uprising.jpg" alt="" /></a>
 								<h3>Uprising: War of Independence</h3>
 								<p>Multiplayer FPS game that immerses you in the Indonesian struggle for independence from the Dutch and allied forces during the pivotal years of 1945 - 1949.
 								</p>
 								<p> <br /> </p>
 								<ul class="icons">
 									<li><a href="https://play.google.com/store/apps/details?id=com.MatataEdu.Uprising" class="fab fa-google-play" style="font-size:36px"></a></li>
-									<li><a href="https://apps.apple.com/us/app/uprising-war-of-independence/id6451290709" class="fab fa-apple" style="font-size:40px"></a></li>									
+									<li><a href="https://apps.apple.com/us/app/uprising-war-of-independence/id6451290709" class="fab fa-apple" style="font-size:40px"></a></li>		
+									<li><a href="https://www.youtube.com/watch?v=UnvhHiBM19Q" class="fa fa-youtube-play" style="font-size:40px"></a></li>							
 								</ul>		
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/kaladuta.png" alt="" /></a>
+								<a href="images/games/kaladuta1.webp" class="image fit thumb"><img src="images/thumbs/kaladuta.png" alt="" /></a>
 								<h3>Ekspedisi Kaladuta</h3>
-								<p>Ekspedisi Kaladuta is a Turn-Based RPG game set in the historical era of the siege of Batavia City by Mataram Sultanate, which was occupied by the Dutch East India Company (VOC) during the years 1628-1629.</p>
+								<p>Turn-Based RPG game set in the historical era of the siege of Batavia City by Mataram Sultanate, which was occupied by the Dutch East India Company (VOC) during the years 1628-1629.</p>
 								<p> <br /> </p>
 								<ul class="icons">
 									<li><a href="https://play.google.com/store/apps/details?id=com.MatataEdu.Uprising" class="fab fa-google-play" style="font-size:36px"></a></li>
@@ -83,9 +84,9 @@
 								</ul>	
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/kaladuta_auto.png" alt="" /></a>
+								<a href="images/games/auto1.webp" class="image fit thumb"><img src="images/thumbs/kaladuta_auto.png" alt="" /></a>
 								<h3>Ekspedisi Kaladuta: Auto Battle</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>Strategic auto battler game set in the historical era of the siege of Batavia City by Mataram Sultanate.</p>
 								<p> <br /> </p>
 								<ul class="icons">
 									<li><a href="https://play.google.com/store/apps/details?id=com.MatataEdu.KaladutaAutoBattle" class="fab fa-google-play" style="font-size:36px"></a></li>
@@ -94,9 +95,9 @@
 								</ul>	
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/kaladuta_harvest.png" alt="" /></a>
+								<a href="images/games/harvest1.webp" class="image fit thumb"><img src="images/thumbs/kaladuta_harvest.png" alt="" /></a>
 								<h3>Ekspedisi Kaladuta: Harvest Tiime!</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>Simulation and time management games with farming theme.</p>
 								<p> <br /> </p>
 								<ul class="icons">
 									<li><a href="https://play.google.com/store/apps/details?id=com.MatataEdu.KaladutaHarvest" class="fab fa-google-play" style="font-size:36px"></a></li>
@@ -105,9 +106,9 @@
 								</ul>	
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/Kaladuta_runner.png" alt="" /></a>
+								<a href="images/games/runner1.webp" class="image fit thumb"><img src="images/thumbs/Kaladuta_runner.png" alt="" /></a>
 								<h3>Ekspedisi Kaladuta: Runner</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>Endless runner game.</p>
 								<p> <br /> </p>
 								<ul class="icons">
 									<li><a href="https://play.google.com/store/apps/details?id=com.MatataEdu.KaladutaRunner" class="fab fa-google-play" style="font-size:36px"></a></li>
@@ -116,28 +117,29 @@
 								</ul>	
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/shd.png" alt="" /></a>
+								<a href="images/games/shd1.webp" class="image fit thumb"><img src="images/thumbs/shd.png" alt="" /></a>
 								<h3>Superhero Diary</h3>
-								<p>Superhero Diary is a game with integrated VR to help children manage anxiety.</p>
+								<p>VR game with daily go-to app to structure and manage your activities.  Plan your routine and cross them out when completed, taking note of your mood while performing the tasks to better familiarize yourself with, well, you.  Learn to recognize the symptoms when anxiety starts to build up and ways to overcome it. </p>
 								<p> <br /> </p>
 								<ul class="icons">
 									<li><a href="https://play.google.com/store/apps/details?id=com.matatacorp.superherodiaryClinic" class="fab fa-google-play" style="font-size:36px"></a></li>
 								</ul>	
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/cikal.png" alt="" /></a>
+								<a href="images/games/cikal7.webp" class="image fit thumb"><img src="images/thumbs/cikal.png" alt="" /></a>
 								<h3>Cikal Playground</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>Hidden Object Games that helps learn about lots of stories and diverse culture or tradition in Indonesia. Has 3 main themes: Bali, Minang, and Ujung Pandang</p>
 								<p> <br /> </p>
 								<ul class="icons">
 									<li><a href="https://play.google.com/store/apps/details?id=com.matata.games.playground.hiddenobject" class="fab fa-google-play" style="font-size:36px"></a></li>
 									<li><a href="https://bantubelajar.co.id/game/bb-playground-minang" class="fa fa-globe" style="font-size:40px"></a></li>
+									<li><a href="https://www.youtube.com/watch?v=oLJ_Ccioo18" class="fa fa-youtube-play" style="font-size:40px"></a></li>
 								</ul>	
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/minang.png" alt="" /></a>
+								<a href="images/games/ar1.webp" class="image fit thumb"><img src="images/thumbs/minang.png" alt="" /></a>
 								<h3>Playground of Minang AR</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>Interactive AR game that showcasing the rich cultural heritage of Minangkabau, an important region in Western Sumatra, Indonesia.  We follow a group of 10 friends who were out for a pleasant weekend.  Fascinated by the sights and sounds of Minang, the 10 of them got separated.  Our job is to find each of them based on the clues about their likes and interests.</p>
 								<p> <br /> </p>
 								<ul class="icons">
 								</ul>	
