--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Firdaus Eka Rizi's Portfolio</title>
+		<title>Firdaus Eka Rizqi's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -78,7 +78,7 @@
 								<p>Turn-Based RPG game set in the historical era of the siege of Batavia City by Mataram Sultanate, which was occupied by the Dutch East India Company (VOC) during the years 1628-1629.</p>
 								<p> <br /> </p>
 								<ul class="icons">
-									<li><a href="https://play.google.com/store/apps/details?id=com.MatataEdu.Uprising" class="fab fa-google-play" style="font-size:36px"></a></li>
+									<li><a href="https://play.google.com/store/apps/details?id=com.MatataEdu.BBIPS7" class="fab fa-google-play" style="font-size:36px"></a></li>
 									<li><a href="https://apps.apple.com/us/app/ekspedisi-kaladuta/id6446247720" class="fab fa-apple" style="font-size:40px"></a></li>
 									<li><a href="https://bantubelajar.co.id/game/bb-ips-7" class="fa fa-globe" style="font-size:40px"></a></li>
 								</ul>	
